# dpg_aknn

./: .gitmodules  CMakeLists.txt  README.md
bat/: eps_graph.bat  query_stats.bat  query_viz.bat  queue_graph.bat  run1.bat  run2.bat  run3.bat  test.bat  tree_stats.bat  tree_viz.bat  viz.bat
data/: .gitignore  clusters_2d_e3.txt  clusters_2d_e5.txt  clusters_3d_e3.txt  clusters_3d_e5.txt  clusters_4d_e3.txt  normal_2d_e3.txt  normal_2d_e5.txt  normal_3d_e3.txt  normal_3d_e5.txt  normal_4d_e3.txt  uniform_2d_e3.txt  uniform_2d_e5.txt  uniform_3d_e3.txt  uniform_3d_e5.txt  uniform_4d_e3.txt
doc/: CMakeLists.txt  annotated.html  bbd__tree_8h.html  bbd__tree_8h_source.html  class_b_b_d_tree-members.html  class_b_b_d_tree.html  class_fixed_pri_queue-members.html  class_fixed_pri_queue.html  class_heap_pri_queue-members.html  class_heap_pri_queue.html  class_inner_node-members.html  class_inner_node.html  class_leaf_node-members.html  class_leaf_node.html  class_linear_pri_queue-members.html  class_linear_pri_queue.html  class_node-members.html  class_node.html  class_shrink_node-members.html  class_shrink_node.html  class_split_node-members.html  class_split_node.html  class_std_pri_queue-members.html  class_std_pri_queue.html  classes.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  hierarchy.html  index.html  mainpage_8md.html  menudata.js  (+31 more)
doc/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+27 more)
src/: main.cpp
src/aknn/: aknn.cpp  bbd_tree.h  pri_queue.h  search.h  vec.h
src/app/: main.cpp
src/scripts/: display.py  eps_graph.py  generate.py  queue_graph.py
src/unit_tests/: pri_queue.cpp  search.cpp  test_data.cpp  test_data.h  vec.cpp
